--- a/SQL[1].ipynb
+++ b/SQL[1].ipynb
@@ -466,7 +466,7 @@
    "outputs": [],
    "source": [
     "def merge(list1, list2): \n",
-    "      \n",
+    "      ##Magic\n",
     "    merged_list = [(str(list1[i]), list2[i]) for i in range(0, len(list1))] \n",
     "    return merged_list"
    ]
